# orbit-wars

./: .dockerignore  .env.example  .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt
services/api/: alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial_schema.py  0002_strategy_publication_metadata.py  0003_strategy_validation_report.py  0004_simulation_metadata.py  0005_replay_metadata.py  0006_matchmaking_audit.py  0007_simulation_candidates.py  0008_strategy_lab.py  0009_core_loop_trust.py  0010_user_authentication.py
services/api/orbit_api/: __init__.py  main.py
services/api/tests/: test_agent_api.py  test_ai_assist.py  test_app.py  test_auth_api.py  test_auth_email.py  test_auth_security.py  test_competition.py  test_core_journeys.py  test_fleets.py  test_github_oauth.py  test_leaderboard.py  test_live_gateway.py  test_matches.py  test_matchmaking.py  test_observability.py  test_persistence.py  test_ratings.py  test_replays.py  test_strategy_lab_api.py  test_strategy_package_store.py  test_strategy_source.py  test_strategy_validation.py  test_strategy_versions.py  test_warmup.py
services/match-worker/: pyproject.toml
services/match-worker/orbit_match_worker/: __init__.py  app.py  infrastructure.py  worker.py
services/match-worker/tests/: test_agent_executor.py  test_app.py  test_controllers.py  test_recovery.py  test_replay_analysis.py  test_replay_persistence.py  test_replay_writer.py  test_runner.py  test_state_machine.py  test_worker.py
(+313 files in other folders)
